[package]
name = "ether-blaze"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.42.0", features = ["full"] }
alloy = { version = "0.8", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"  
once_cell = "1.20.2"
log = "0.4"
dotenv = "0.15.0"
agent-twitter-client = "0.1.1"
